# werewolf-state-machine

./: README.md  pyproject.toml  werewolf.mmd
src/: state.py  werewolf.py
src/forum/: common.py
src/forum/messaging/: __init__.py  message.py
src/forum/worlds/werewolf/: __init__.py  machine.py
test/: test_werewolf.py
